pkg/lang/testdata/ub/config/valid/configurations-nested-literal.ub
configurations: { aws: { default: { zones: ['a', 'b'], tags: { env: 'prod' } } } }
