pkg/lang/testdata/ub/config/invalid/configurations-var-reference.ub
configurations: { aws.default: { region: var.region } }
